@@ -82,6 +82,10 @@ xine-lib (1.1.17) 2009-??-??
   * Added padding delay to the first and last frames (MPEG audio).
   * Fixed buggy discontinuity handling when playing short streams and using the gapless switch. The current time should not be used here.
   * Added audio padding handling. (New buffer flag for this.)
+  * Fix seeking in large raw DV files.
+  * Ported to new libmpcdec API (retaining build compat. with the old API).
+  * Cope with CDDB return code 211 (multiple entries).
+  * Allow reading of non-block-sized chunks from audio CDs.
 
 xine-lib (1.1.16.3) 2009-04-03
   * Security fixes:
